tests/fixtures/invalid/defectInvalidSectionName.yini
^ App
name = "My Application"

^ 20-Database     // INVALID: section name must start with a letter or underscore
host = "localhost"
port = 5432
